--- a/t/th/thi/thinkenergygroup.com.html
+++ b/t/th/thi/thinkenergygroup.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the thinkenergygroup.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205144043id_/http%3A//www.thinkenergygroup.com/Think.nsf/InfoNFR/Privacy-Security%3FOpenDocument) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thinkenergygroup.com privacy policy that was archived on 2002-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020606030535id_/http%3A//www.thinkenergygroup.com/Think.nsf/InfoNFR/Privacy-Security%3FOpenDocument) for the most accurate reproduction.-->
 
-<html><!-- Lotus-Domino (Release 5.0.4 - June 8, 2000 on Windows NT/Intel) --><head>
+<html><!-- Lotus-Domino (Release 5.0.8 - June 18, 2001 on Windows NT/Intel) --><head>
 <title>Technical Staffing - Press Release - Atlanta, Georgia, Florida</title>
 <meta name="description" content="Technical Staffing - Press Release - Atlanta, Georgia, Florida Engineering Jobs Online Career Search Atlanta Georgia Florida.  Start your technical job search here. ">
 <meta name="keywords" content="Technical Staffing, ThinkJobs.com, Job Search, Computer Job, Think Resources, designer, analyst, writer, drafter, engineer, engineering, programmer, Technician, mechanical, electrical, civil, chemical, instrumentation, Technical Staffing, executive recruiter, career web sites, career sites, head hunters, headhunters, recruiters, job search sites, employment, employment agency, agencies, careers, Technical Staffing, recruiting agencies, recruiting firms, hiring, resumes, resume,Georgia, Florida, North Carolina, Atlanta, Jacksonville, Orlando, Tampa, Charlotte, programming, technical staffing, QA, QC, Autocad, pro-engineer,  Atsjobs.com, drafterjobs.com, bsmejobs.com, bscejobs.com, bsiejobs.com, High Tech, placement agency, Recruiting, Recruiter, Telecommunications, Drafting">
@@ -111,48 +111,43 @@
 </tbody></table>
 
 <table border="0" cellspacing="0" cellpadding="0">
-<tbody><tr valign="top"><td width="96"><img src="/icons/ecblank.gif" border="0" height="1" width="1" alt=""></td><td width="720"><ul><ul><ul><ul><b><font size="4" color="CC0000" face="Verdana">Privacy/Security</font></b><br>
+<tbody><tr valign="top"><td width="96"><img src="/icons/ecblank.gif" border="0" height="1" width="1" alt=""></td><td width="720"><ul><ul><ul><ul><b><font size="5" color="CC0000" face="Verdana">Privacy/Security</font></b><font size="4" face="Times New Roman"><br>
+</font><b><font size="2" face="Verdana"><br>
+Information You Provide</font></b><font size="2" face="Verdana"><br>
+At ThinkJobs.com, we respect your privacy. Our job-seeker registration form requires users to submit contact information (such as their e-mail address) and to complete a candidate profile containing information about employment preferences and qualifications. Job seekers may also submit a resume. The user's contact and personal information is used to contact them when necessary, and to send automatic notifications of matching job opportunities or confidential "invitations" that may result when we search the ThinkJobs.com database. </font><br>
+<font size="2" face="Verdana"><br>
+E-mail addresses submitted to ThinkJobs.com will be used only for the purposes of the ThinkJobs.com career search service or any other entity owned by Think Resources. As stated above, the release of a user's resume, contact information and e-mail are under the control of the user and will not be released unless so authorized by the user. User contact information is used only for delivering ThinkJobs.com services and are kept confidential. This information will never be sold or otherwise distributed to third parties for purposes other than those outlined above. We have taken measures to assure both the physical and electronic security of the data we store. </font><br>
 <br>
-<b><font size="1" face="Verdana">Information You Provide</font></b><br>
-<font size="1" face="Verdana">At ThinkJobs.com, we respect your privacy. Our job-seeker registration form requires users to submit contact information (such as their e-mail address) and to complete a candidate profile containing information about employment preferences and qualifications. Job seekers may also submit a resume. The user's contact and personal information is used to contact them when necessary, and to send automatic notifications of matching job opportunities or confidential "invitations" that may result when employers search the ThinkJobs.com database. When potential employers search our candidate database, they are not searching user resumes. Rather, they peruse profiles created by users. The profile created by the job seeker is designed to protect his/her privacy and does not contain any personally identifiable information UNLESS the candidate enters such information intentionally.</font><br>
-<br>
-<font size="1" face="Verdana">E-mail addresses submitted to ThinkJobs.com will be used only for the purposes of the ThinkJobs.com career search service. As stated above, the release of a user's resume, contact information and e-mail are under the control of the user and will not be released unless so authorized by the user in one of the ways outlined above, or if the user specifically chooses to receive updates and special offers from ThinkJobs.com. User contact information is used only for delivering ThinkJobs.com services and are kept confidential. This information will never be sold or otherwise distributed to third parties for purposes other than those outlined above. We have taken measures to assure both the physical and electronic security of the data we store. </font><br>
-<br>
-<b><font size="1" face="Verdana">IP Addresses </font></b><font size="1" face="Verdana"><br>
+<b><font size="2" face="Verdana">IP Addresses </font></b><font size="2" face="Verdana"><br>
 We store IP addresses to help diagnose problems with our server and to administer our Web site. We do not link IP addresses to anything personally identifiable.</font><br>
 <br>
-<b><font size="1" face="Verdana">Cookies</font></b><font size="1" face="Verdana"><br>
+<b><font size="2" face="Verdana">Cookies</font></b><font size="2" face="Verdana"><br>
 Our site uses cookies to optimize service for visitors. A cookie lets us recognize repeat visitors more quickly and makes visits to our site more personalized and productive.</font><br>
 <br>
-<b><font size="1" face="Verdana">Outside Links</font></b><font size="1" face="Verdana"><br>
+<b><font size="2" face="Verdana">Outside Links</font></b><font size="2" face="Verdana"><br>
 This site contains links to other sites. ThinkJobs.com is not responsible for the privacy practices or the content of such Web sites and can only recommend caution in using such sites.</font><br>
 <br>
-<b><font size="1" face="Verdana">Private E-mail</font></b><font size="1" face="Verdana"><br>
+<b><font size="2" face="Verdana">Private E-mail</font></b><font size="2" face="Verdana"><br>
 ThinkJobs.com strongly encourages users who do not wish to receive employment-related information at their primary e-mail address (e.g. place of work) to open a personal e-mail account at any of the many sites offering free Internet e-mail accounts, such as hotmail.com, yahoo.com and mail.com. </font><br>
 <br>
-<b><font size="1" face="Verdana">Choice/Opt-Out</font></b><font size="1" face="Verdana"><br>
-This site gives users the option of removing their information from our database, to not receive future communications or to no longer receive our service. You can send e-mail to </font><a href="mailto:Support@ThinkJobs.com"><font size="1" color="0000ff" face="Verdana">support@ThinkJobs.com</font></a><font size="1" face="Verdana">.</font><br>
+<b><font size="2" face="Verdana">Choice/Opt-Out</font></b><font size="2" face="Verdana"><br>
+This site gives users the option of removing their information from our database, to not receive future communications or to no longer receive our service. You can send e-mail to </font><a href="mailto:Support@ThinkJobs.com"><u><font size="2" color="0000FF" face="Verdana">support@ThinkJobs.com</font></u></a><font size="2" face="Verdana">.</font><br>
 <br>
-<b><font size="1" face="Verdana">Security</font></b><font size="1" face="Verdana"><br>
-ThinkJobs.com takes every precaution to protect user information. When a user submits sensitive information via the Web site, that information is protected both online and off-line. </font><br>
+<b><font size="2" face="Verdana">Security</font></b><font size="2" face="Verdana"><br>
+ThinkJobs.com takes every precaution to protect user information. When a user submits sensitive information via the Web site, that information is protected both online and off-line. All user information is restricted in our offices, not just the sensitive information to which we refer above. Only employees who need the information to perform their job (for example, a billing clerk or a customer service representative) are granted access to that information. Furthermore, all employees are kept up-to-date on ThinkJobs.com's security and privacy practices. Our employees are notified and/or reminded about the importance we place upon privacy, and what they can do to ensure our customers' information is protected.</font><br>
 <br>
-<font size="1" face="Verdana">While we use SSL encryption to protect sensitive information online, we also do everything in our power to protect your information off-line. All user information is restricted in our offices, not just the sensitive information to which we refer  above. Only employees who need the information to perform their job (for example, a billing clerk or a customer service representative) are granted access to that information. Furthermore, all employees are kept up-to-date on ThinkJobs.com's security and privacy practices. Our employees are notified and/or reminded about the importance we place upon privacy, and what they can do to ensure our customers' information is protected.</font><br>
+<font size="2" face="Verdana">Finally, the servers where we store personal information are kept in a protected Environment, with multiple, redundant security features.If you have any questions about the security at ThinkJobs.com, please don't hesitate to contact us at: </font><a href="mailto:Support@ThinkJobs.com"><u><font size="2" color="0000FF" face="Verdana">support@ThinkJobs.com</font></u></a><font size="2" face="Verdana">.</font><br>
 <br>
-<font size="1" face="Verdana">Finally, the servers where we store personal information are kept in a protected environment, with multiple, redundant security features.</font><br>
+<b><font size="2" face="Verdana">Change/Modify</font></b><font size="2" face="Verdana"><br>
+To change the information in your profile that ThinkJobs.com maintains please call 770-390-0963 or 800-659-5639 and speak to one of our Helpdesk representatives.  They will be able to update your preferences and other information contained in your profile.</font><br>
 <br>
-<font size="1" face="Verdana">If you have any questions about the security at ThinkJobs.com, please don't hesitate to contact us at: </font><a href="mailto:Support@ThinkJobs.com"><font size="1" color="0000ff" face="Verdana">support@ThinkJobs.com</font></a><font size="1" face="Verdana">.</font><br>
-<br>
-<b><font size="1" face="Verdana">Change/Modify</font></b><font size="1" face="Verdana"><br>
-This site gives users the option of changing and modifying information previously provided. Simply go to </font><a href="http://www.ThinkJobs.com"><font size="1" color="0000ff" face="Verdana">www.ThinkJobs.com</font></a><font size="1" face="Verdana">, click on the Your Account link and enter your Username and Password. From Your Account, select the appropriate link to edit your profile or contact information or submit an updated resume.</font><br>
-<br>
-<b><font size="1" face="Verdana">Notification of Changes</font></b><font size="1" face="Verdana"><br>
+<b><font size="2" face="Verdana">Notification of Changes</font></b><font size="2" face="Verdana"><br>
 This policy may be revised over time as new features are added to the Web site. Changes will be prominently posted. ThinkJobs.com visitors will always know what information we gather, how we might use that information, and whether we will disclose it to anyone. Please check this site regularly for information about revisions to our privacy policy. </font><br>
 <br>
-<b><font size="1" face="Verdana">Contacting the Web Site</font></b><font size="1" face="Verdana"><br>
-If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact: </font><a href="mailto:Webmaster@ThinkJobs.com"><font size="1" color="0000ff" face="Verdana">webmaster@thinkjobsobs.com</font></a><font size="1" face="Verdana">.</font></ul></ul></ul></ul><br>
+<b><font size="2" face="Verdana">Contacting the Web Site</font></b><font size="2" face="Verdana"><br>
+If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact: </font><a href="mailto:Webmaster@ThinkJobs.com"><u><font size="2" color="0000FF" face="Verdana">webmaster@thinkjobs.com</font></u></a><font size="2" face="Verdana">.</font><br>
 <br>
-<br>
-</td></tr>
+</ul></ul></ul></ul></td></tr>
 </tbody></table>
 </p><center><table border="0" height="25" width="100%" cellspacing="0" cellpadding="0"> <tbody><tr bgcolor="#FFCC00" valign="middle">
 <td align="center" width="100"><a href="/Think.nsf/InfoNFR/Privacy-Security?OpenDocument"><font size="1" color="#0033CC" face="Verdana,Arial, Helvetica"><b>Privacy/Security</b></font></a><font size="1" color="#0033CC" face="Verdana,Arial, Helvetica"><b>
@@ -170,8 +165,8 @@ If you have any questions about this privacy statement, the practices of this si
 <br>
 <br>
 <font size="1" color="424242" face="Verdana">ThinkJobs.com is a Technical Staffing company who's focus is assisting Job Seekers with their Job Search - Career Search for Engineering Jobs, Computer Jobs and Accounting Jobs. Our focus is in the SouthEastern United States; Georgia, Florida, North Carolina, Alabama, Atlanta.  Pay close attention to our Hot Jobs status in the Tech Jobs section. </font><br>
-<br>
-<br>
-<font size="2" face="Arial"><!--</FONT>--><div align="center"></div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="/think.nsf/Pages?OpenAgent"> 
+<p><br>
+<font size="2" face="Arial"><!--</FONT>--></font></p><div align="center"></div><font size="2" face="Arial">
 
 </font></font></body></html>
