--- a/t/tr/tra/travelchinaguide.com.html
+++ b/t/tr/tra/travelchinaguide.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the travelchinaguide.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201214633id_/http%3A//travelchinaguide.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the travelchinaguide.com privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607140255id_/http%3A//www.travelchinaguide.com/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/about_whole.dwt" --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/about_us.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
 <meta name="description" content="Travel China Guide offers China travel information, attractions, travel essentials and China tours with price listings.">
-<meta name="keywords" content="travel China, China travel"> 
+<meta name="keywords" content="travel China, China travel">
+ 
 <title>Travel China Guide: Privacy</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="author" content="Travel China Guide.com">
 <script language="JavaScript">
-
 <!--
 function MM_reloadPage(init) {  //reloads the window if Nav4 resized
   if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
@@ -19,7 +19,6 @@ function MM_reloadPage(init) {  //reloads the window if Nav4 resized
 }
 MM_reloadPage(true);
 // -->
-
 </script>
 <script language="JavaScript">
 <!-- Hide the script from old browsers --
@@ -29,10 +28,25 @@ location=form.site.options[myindex].value;
 }
 //-->
 </script>
+<script language="JavaScript">
+<!-- Hide the script from old browsers --
+function linkto(form) {
+var link=form.city.selectedIndex
+location=form.city.options[link].value;
+}
+//-->
+</script>
+<script language="JavaScript">
+<!-- Hide the script from old browsers --
+function linkto2(form) {
+var link2=form.prov.selectedIndex
+location=form.prov.options[link2].value;
+}
+//-->
+</script>
 </head>
-<body alink="#333333" bgcolor="#ffffff" leftmargin="0" link="#333333" text="#000000" topmargin="0" vlink="#333333" marginheight="0" marginwidth="0">
+<body alink="#0000FF" bgcolor="#FFFFFF" leftmargin="0" link="#003366" text="#000000" topmargin="0" vlink="#660033" marginheight="0" marginwidth="0">
 <center>
-  <p> 
   <!-- #BeginLibraryItem "/Library/top.lbi" --><table border="0" cellpadding="0" cellspacing="0" width="605">
   <tbody> 
   <tr> 
@@ -47,41 +61,39 @@ location=form.site.options[myindex].value;
           <option value="/intro/">China Introduction</option>
           <option value="/cityguides/">City Guide</option>
           <option value="/attraction/">Attractions</option>
-          <option value="/embassy/">Embassy &amp; Visa</option>
           <option value="/essential/">Travel Essentials</option>
+          <option value="/embassy/">Embassy &amp; Visa</option>
           <option>------------------</option>
           <option value="/group/">Small Group</option>
-          <option value="/package/">City Packages</option>
-          <option value="/tour/">China Tours</option>
           <option value="/cruise/">Yangtze River Cruises</option>
+          <option value="/tour/">China Tours</option>
+          <option value="/package/">City Packages</option>
+          <option value="/shopping/">Online Shopping</option>
           <option value="/feedback/">Testimonial </option>
-          <option>------------------</option>
-          <option value="/hotel/">Hotel</option>
-          <option value="/cruise_ship/">Cruise Ship</option>
           <option>------------------</option>
           <option value="/map/">Maps</option>
           <option value="/picture/">Photo Gallery</option>
           <option value="/climate/">Climate</option>
-          <option value="/weather/">Weather</option>
+          <option value="/hotel/">Hotel</option>
           <option>------------------</option>
           <option value="/travel_gossip.htm">Travel Gossip</option>
           <option>------------------</option>
           <option value="/aboutus.htm">About Us</option>
-          <option value="/contact_us.htm">Contact Us</option>
+          <option value="/advertise/">Advertising</option>
           <option value="/volunteer.htm">Volunteer </option>
+          <option value="/content.htm">Site Map</option>
+          <option value="/faq.htm">FAQs</option>
+          <option value="/link_us.htm">Link Exchange</option>
         </select>
         <input type="button" value="Go" onclick="jumpto(this.form)">
       </form>
     </td>
     </tr>
-  </tbody></table><!-- #EndLibraryItem --> 
-  <table border="0" cellpadding="0" cellspacing="0" width="605">
-    <tbody> 
-    <tr> 
-      <td align="middle"><!-- #BeginLibraryItem "/Library/title_other.lbi" --> <img src="/images/logo/title/title_lan.gif" width="605" height="19" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="4,2,46,17" href="/index.html"><area shape="rect" coords="66,1,139,17" href="/cityguides/index.htm"><area shape="rect" coords="152,2,233,16" href="/attraction/index.htm"><area shape="rect" coords="251,2,379,18" href="/travel.htm"><area shape="rect" coords="394,3,478,18" href="/intro/index.htm"><area shape="rect" coords="493,2,536,17" href="/faq.htm"></map><!-- #EndLibraryItem --></td>
+  </tbody></table><!-- #EndLibraryItem --><table width="605" border="0" cellspacing="0" cellpadding="0">
+    <tbody><tr> 
+      <td> <img src="/images/logo/title/title_lan.gif" width="605" height="19" border="0" usemap="#Map"></td>
     </tr>
-    </tbody> 
-  </table>
+  </tbody></table>
   <table border="0" cellpadding="0" cellspacing="0" width="605">
     <tbody><tr align="right" bgcolor="#eeeeee"> 
       <td><img height="4" src="/images/logo/line/gray.gif" width="605"></td>
@@ -89,45 +101,84 @@ location=form.site.options[myindex].value;
     </tbody><tbody> 
     <tr align="right" bgcolor="#eeeeee"> 
       <td><font size="1" face="Arial, Helvetica, sans-serif">Last updated: </font><font size="1" face="Arial, Helvetica, sans-serif"> 
-        <!-- #BeginDate format:Am1 -->October 30, 2001<!-- #EndDate -->
+        <!-- #BeginDate format:Am1 -->May 22, 2002<!-- #EndDate -->
         <img height="10" src="/images/logo/bullet/transparent.gif" width="8"> </font></td>
     </tr>
     </tbody> 
   </table>
-  </p><p><br>
+  <br>
   <table width="605" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr> 
-      <td><font size="2" face="Arial, Helvetica, sans-serif"><b><a href="/index.html">Home</a>: 
-        <!-- #BeginEditable "direct_list" --><font size="2" face="Arial, Helvetica, sans-serif"></font><!-- #EndEditable --> </b></font></td>
+      <td><a href="/index.html"><b><font face="Arial, Helvetica, sans-serif" size="2">Home</font></b></a><font face="Arial, Helvetica, sans-serif" size="2"><b> 
+        : <!-- #BeginEditable "title" --><font face="Arial, Helvetica, sans-serif" size="2"><b>About Us :</b></font><!-- #EndEditable --></b></font></td>
     </tr>
   </tbody></table>
-  <br>
-  <br>
-  <table border="0" cellpadding="4" cellspacing="0" width="600">
-    <tbody><tr align="center"> 
-      <td colspan="3"> <img src="/images/logo/line/grey_li.gif" width="590" height="1"></td>
-    </tr>
-    </tbody><tbody> 
-    <tr> 
-      <td valign="top" colspan="3" align="center"> <font size="6" color="#666666" face="Times New Roman, Times, serif"><b><!-- #BeginEditable "title" --><font size="6" color="#666666"><b>Privacy 
-        &amp; Security</b></font><!-- #EndEditable --> 
-        </b></font></td>
-    </tr>
-    <tr align="center"> 
-      <td colspan="3"><img src="/images/logo/line/grey_li.gif" width="590" height="1"><br>
-      </td>
-    </tr>
-    <!-- ARTICLE NAVIGATION --> <!-- END ARTICLE NAVIGATION --></tbody> 
-  </table>
-  <br>
-  <table border="0" cellpadding="0" cellspacing="0" width="600">
-    <tbody> 
-    <tr valign="top"> 
-      <td> <!-- #BeginEditable "cont" --> <br>
-        <font face="Arial, Helvetica, sans-serif" size="2"> <b>TravelChinaGuide 
-        Respects Your Privacy</b> <br>
+  <table width="605" border="0" cellspacing="0" cellpadding="0">
+    <tbody><tr> 
+      <td> 
+        <table width="170" border="0" cellspacing="0" cellpadding="0" align="right">
+          <tbody><tr> 
+            <td align="right"> <br>
+              <table width="160" border="0" cellspacing="0" cellpadding="7" background="/images/logo/patte/lang_left.gif" bgcolor="#F5F5F5">
+                <tbody><tr> 
+                  <td bgcolor="#FFCC66"><img src="/images/logo/bullet/transparent.gif" width="8" height="2"></td>
+                </tr>
+                <tr> 
+                  <td><font face="Arial, Helvetica, sans-serif" size="2"><b><a href="/aboutus.htm"><br>
+                    About Us</a><!-- #BeginEditable "about_us" --><font face="Arial, Helvetica, sans-serif" size="2"></font>
+<!-- #EndEditable --></b></font></td>
+                </tr>
+                <tr> 
+                  <td><font face="Arial, Helvetica, sans-serif" size="2"><b><a href="/content.htm">Site 
+                    Map</a></b></font></td>
+                </tr>
+                <tr> 
+                  <td><font size="2" face="Arial, Helvetica, sans-serif"><b><a href="/volunteer.htm">Volunteer</a><!-- #BeginEditable "volunteer" --><font size="2" face="Arial, Helvetica, sans-serif"></font>
+<!-- #EndEditable --></b></font></td>
+                </tr>
+                <tr> 
+                  <td><font face="Arial, Helvetica, sans-serif" size="2"><b><a href="/advertise/index.htm">Advertising</a></b></font></td>
+                </tr>
+                <tr> 
+                  <td><b><font face="Arial, Helvetica, sans-serif" size="2"><a href="/link_us.htm">Link 
+                    to Us</a></font></b> </td>
+                </tr>
+                <tr> 
+                  <td><b><font face="Arial, Helvetica, sans-serif" size="2"><a href="/link/index.htm"> 
+                    Link Exchange</a></font></b></td>
+                </tr>
+                <tr> 
+                  <td><b><font face="Arial, Helvetica, sans-serif" size="2"><a href="/link/links.htm">Link 
+                    Partners</a></font></b></td>
+                </tr>
+                <tr> 
+                  <td><font face="Arial, Helvetica, sans-serif" size="2"><b><a href="/terms_use.htm">Terms 
+                    of Use</a></b></font></td>
+                </tr>
+                <tr> 
+                  <td> 
+                    <p><font face="Arial, Helvetica, sans-serif" size="2"><b><a href="/privacy.htm">Privacy 
+                      Policy<br>
+                      <br>
+                      <br>
+                      </a></b></font></p>
+                  </td>
+                </tr>
+              </tbody></table>
+              <br>
+            </td>
+          </tr>
+        </tbody></table>
         <br>
-        </font><font face="Arial, Helvetica, sans-serif" size="2">TravelChinaGuide 
+        <img src="/images/logo/line/grey_line.gif" width="420" height="1"><br>
+        <br>
+        <b><font face="Times New Roman, Times, serif" size="6" color="#666666"><!-- #BeginEditable "direct_list" --><font size="2" face="Arial, Helvetica, sans-serif"></font>Privacy &amp; Security<font size="3"><br>
+        TravelChinaGuide Respects Your Privacy</font> <!-- #EndEditable --></font></b><br>
+        <br>
+        <font face="Arial, Helvetica, sans-serif" size="2"><img src="/images/logo/line/grey_line.gif" width="420" height="1"></font><br>
+        <br>
+        <br>
+        <!-- #BeginEditable "content" --><font face="Arial, Helvetica, sans-serif" size="2">TravelChinaGuide 
         is committed to protecting your privacy and pledges to earn your trust. 
         We will only use your information for purposes of enhancing your travel.<br>
         <br>
@@ -159,20 +210,19 @@ location=form.site.options[myindex].value;
         <br>
         <font face="Arial, Helvetica, sans-serif" size="2">TravelChinaGuide is 
         committed to protecting your privacy. We encourage you to send us comments 
-        or questions regarding this policy. Please contact us at<b> </b></font><a href="mailto:webmaster@travelchinaguide.com">webmaster@travelchinaguide.com</a><a href="mailto:info@TravelChinaGuide.com"></a>.<br>
-        <!-- #EndEditable --> <br>
-      </td>
+        or questions regarding this policy. Please contact us at <a href="mailto:webmaster@travelchinaguide.com">webmaster@travelchinaguide.com</a></font>.<br>
+        <!-- #EndEditable --></td>
     </tr>
-    </tbody> 
-  </table>
+  </tbody></table>
   <br>
-  <table border="0" cellpadding="0" cellspacing="0" width="605">
-    <tbody> 
-    <tr> 
-      <td align="middle" colspan="11"><!-- #BeginLibraryItem "/Library/title_other.lbi" --> <img src="/images/logo/title/title_lan.gif" width="605" height="19" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="4,2,46,17" href="/index.html"><area shape="rect" coords="66,1,139,17" href="/cityguides/index.htm"><area shape="rect" coords="152,2,233,16" href="/attraction/index.htm"><area shape="rect" coords="251,2,379,18" href="/travel.htm"><area shape="rect" coords="394,3,478,18" href="/intro/index.htm"><area shape="rect" coords="493,2,536,17" href="/faq.htm"></map><!-- #EndLibraryItem --></td>
+  <br>
+  <table width="605" border="0" cellspacing="0" cellpadding="0">
+    <tbody><tr> 
+      <td>
+        
+          <img src="/images/logo/title/botm.gif" width="605" height="20" usemap="#Map2" border="0"></td>
     </tr>
-    </tbody> 
-  </table>
+  </tbody></table>
   <!-- #BeginLibraryItem "/Library/bottom.lbi" -->
 <table border="0" cellpadding="0" cellspacing="0" width="605">
   <tbody><tr>
@@ -186,8 +236,21 @@ location=form.site.options[myindex].value;
   </tr>
   </tbody> 
 </table>
-<!-- #EndLibraryItem -->
-</p></center>
+<!-- #EndLibraryItem --> 
+</center>
+<map name="Map">
+<area shape="rect" coords="4,2,46,17" href="/index.html">
+<area shape="rect" coords="66,1,139,17" href="/cityguides/index.htm">
+<area shape="rect" coords="151,2,232,16" href="/attraction/index.htm">
+<area shape="rect" coords="252,3,380,19" href="/travel.htm">
+<area shape="rect" coords="394,3,478,18" href="/intro/index.htm">
+<area shape="rect" coords="493,2,536,17" href="/faq.htm">
+</map>
+<map name="Map2">
+  <area shape="rect" coords="142,1,194,17" href="/content.htm">
+  <area shape="rect" coords="66,3,130,19" href="/advertise/index.htm">
+  <area shape="rect" coords="-5,0,53,18" href="/aboutus.htm">
+</map>
 
 <!-- #EndTemplate -->
 </body></html>
