--- a/p/pe/per/perkinelmer.com.html
+++ b/p/pe/per/perkinelmer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the perkinelmer.com privacy policy that was archived on 2001-08-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010803025825id_/http%3A//perkinelmer.com/overview/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the perkinelmer.com privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607143957id_/http%3A//perkinelmer.com/overview/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>PerkinElmer Corporate &gt; Privacy Policy</title>
@@ -23,7 +23,9 @@
 					<td><img src="/images/leftnav/square.gif" width="158" height="6" alt="" border="0"></td>
 				</tr>
 				<tr>
-					<form name="searchform" method="GET" action="http://perkinelmer.com/wbin/search/search.asp"></form>
+					<form name="searchform" method="GET" action="http://www.perkinelmer.com/wbin/search/search.asp"></form>
+
+
 					<td background="/images/leftnav/left_nav_bgd.gif" align="right">
 						<table border="0" cellspacing="0" cellpadding="0">
 						<tbody><tr>
@@ -82,7 +84,6 @@
 <a href="/contact/index.asp" onmouseover="swapImage('corp1','/images/leftnav/menu/m_corp_reg.gif');swapImage('corp2','/images/leftnav/menu/m_news_reg.gif');swapImage('corp3','/images/leftnav/menu/m_investor_reg.gif');swapImage('corp4','/images/leftnav/menu/m_careers_reg.gif');swapImage('corp5','/images/leftnav/menu/m_contact_on.gif');popUp('HM_Menu5',event)" onmouseout="popDown('HM_Menu5')"><img src="/images/leftnav/menu/m_contact_reg.gif" width="158" height="24" border="0" name="corp5"></a>
 <br>
 
-
 			</td>
 		</tr>
 		<tr>
@@ -97,11 +98,7 @@
 		<tbody><tr>
 			<td>
 			<!-- BEGIN HEADER INCLUDE -->
-		<meta name="keywords" content="aerospace engineering, airport security systems, alpha-c seal, amorphous silicon detector, analog devices, analog optical isolators, apd circuit, apd eg, api testing, arc lamps, automotive durability testing, automotive fuels testing, automotive lubricant testing, automotive research, automotive transmissions, automotive vehicle testing, belfab, berthold gmbh, biotech, c flex, cad, cargo x-ray systems, chass is dynamometer, crc 138, crc-138, currency printers, current preamplifiers, cw laser, diagnostic, diesel engines, durability testing, dynamometer, dynamometer testing, eg&amp;g optoelectronics, electricity, electrochemical instrument, electrochemical instruments, electrochemistry, electroformed optics, electron microscope, electronic circuits, elmer, emissions testing, engine durability testing, engine dynamometer, epa, fiber optic bundles, fiber optic receiver, flashlamp, flashtubes, flex, flex joint, fuel cells, fuel testing, germanium infrared detectors, germanium photodiode, high energy switches, ilc technology, industrial engineering, ingaas detectors, lean production, light sources, line scan sensor, linear flashlamp, live cell imaging systems, low pressure sensors, luminescence assays, machine vision strobe, mechanical engineering, metal halide lamps, nuclear spectroscopy, optical coupling, optical engineering, optical switches, opto, optoelectronics, orc lamp, osha, pe, pe corp, pe life sciences, performance parts, perkin, perkin elmer, perkin elmer analytical instruments, perkin elmer belfab, perkin elmer corporation, perkin elmer fluid science, perkin elmer fluid sciences, perkin elmer instruments, perkin elmer life sciences, perkin elmer opto, perkin elmer optoelectronics, perkin elmer.com, perkinelmer, perkin-elmer, perkinelmer automotive research, perkinelmer eg, perkinelmer fluid sciences, perkinelmer inc., perkinelmer incorporated, perkinelmer instruments, perkinelmer instruments salem, perkinelmer life sciences, perkinelmer life science, perkinelmer lifesciences, perkinelmer nen, perkinelmer opto, perkinelmer optoelectronics, perkinelmer reticon, perkinelmer x-ray instruments, perkinelmer.com, pharmaceutical instruments, pid lamp, pki, portable baggage inspection, pulsed laser diodes, pulsed light, pyroelectric infrared detector, q-arc, science instruments, scientific instrumentation, semiconductor, semiconductors, silicon photodiode, silicon photodiodes, silicon pressure sensor, single photon counting, thermopile detectors, thyratrons, time resolved fluorometry, trigger transformer, tungsten spectrum, vactec, vehicle testing, victor hts wallac, voltmeter, wallac, wallac betaplate system, wallac fluorescence flite, wallac ls counter, www.perkinelmer.com, xenon flashlamp, xenon lamps"> 
-
-
-
-
+		
 		<table width="602" border="0" cellspacing="0" cellpadding="0">
 		<tbody><tr>
 			<td>
@@ -186,7 +183,7 @@ A cookie is a small piece of information that tells a web site you have visited 
 	<!-- BEGIN FOOTER INCLUDE -->
 	<p><table border="0" cellspacing="0" cellpadding="0" align="center">
 	<tbody><tr>
-		<td align="center" class="footer">Copyright © 1998-2001 PerkinElmer, Inc. All rights reserved.<br>See important <a href="/overview/disclaimer.asp" class="cookietrail">Disclaimers</a> and <a href="/overview/privacy.asp" class="cookietrail">Privacy Policy</a>.</td>
+		<td align="center" class="footer">Copyright © 1998-2002 PerkinElmer, Inc. All rights reserved.<br>See important <a href="/overview/disclaimer.asp" class="cookietrail">Disclaimers</a> and <a href="/overview/privacy.asp" class="cookietrail">Privacy Policy</a>.</td>
 	</tr>
 	</tbody></table></p><br>
 	<!-- END FOOTER INCLUDE -->
