--- a/m/ma/mad/madsci.org.html
+++ b/m/ma/mad/madsci.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the madsci.org privacy policy that was archived on 2001-08-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010809180732id_/http%3A//www.madsci.org/info/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the madsci.org privacy policy that was archived on 2002-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020607144658id_/http%3A//www.madsci.org/info/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>MadSci Privacy Policy</title>
@@ -45,6 +45,10 @@ We use this information in the following manner:
 	</li><li> In addition, we may opt to supply this information to a user's 
 	identified Internet Service Provider concerning any user who blantantly 
 	abuses or attempts to interfere with the functioning of our site.
+	</li><li> Beyond these points, MadSci does not disclose, give, sell, or 
+	transfer personal information concerning visitors to our
+	website unless required for law enforcement or otherwise required
+	by law.
 </li></ul>
 The reports generated are available from our <a href="/stats/">Monthly
 Statistics</a> page. This information may also be used in 
@@ -67,17 +71,18 @@ For individuals asking questions, we may record the following information:
 		</li></ul>
 	If included, all components except the email address may be made available
 	in questions posted to the public area of our website. Again, if you do not
-	wish this information to be publically accessible, we recommend that you
+	wish this information to be publically accessible, do
 	not fill in these areas.
 </li></ul>
 We store this information in our monthly log files and use it for the following:
 	<ul>
-	<li> Track the submission of questions in individual subjects. This
+	<li> Track the number of questions submitted in individual subjects. This
 	information helps us determine when we need to recruit additional
 	scientists to field questions, or whether specific subjects should be
-	added or removed from our existing list.
-	</li><li> Generate information concerning the grade-level of students and others
-	who access our site.
+	added or removed from our existing list. 
+
+	</li><li> Generate generic information concerning the grade-level of students and others
+	who submit questions.
 	</li><li> Identify commonly asked questions, and create Frequently-Asked-Question
 	files (FAQs) to address them.
 	</li><li> We will also use this information to trouble-shoot errors or problems in
@@ -86,6 +91,10 @@ We store this information in our monthly log files and use it for the following:
 	Internet Service Provider concerning any user who abuses our interfaces 
 	or who submits materials that are rude, obnoxious, that contain expletives, 
 	or threats of any sort.
+        </li><li> Beyond these points, MadSci does not disclose, give, sell, or
+        transfer personal information concerning visitors to our
+        website unless required for law enforcement or otherwise required
+        by law.
 	</li></ul>
 
 More information about Internet Privacy can be found at the
@@ -94,12 +103,8 @@ US Federal Trade Commission</a>.
 <p>
 If you have further questions concerning this policy, please contact us
 at <a href="webadmin@www.madsci.org">webadmin@www.madsci.org</a>.
-Our snail mail address is:
-</p><pre>	  MadSci Network
-          P.O. Box 548
-	  Boston, MA 02117
-</pre>
-<hr>
+</p><p>
+</p><hr>
 <center>
 <a href="/index.html"><img width="66" height="50" border="0" src="/icons/menu/home.gif" alt="Home Page"></a>
 <a href="/info.html"><img width="51" height="50" border="0" src="/icons/menu/info.gif" alt="Info Desk"></a>
